           (in milliseconds) to control Preview updating intervals valid range 100 - 10000
           default value: 1000, will be set once at Sigil startup.
      - Add new Find and Replace targets: Selected SVG files, Selected Javascript Files, and Selected Misc XML
      - Add ability to rename files when new name is just a case variant on case insensitive filesystems

    Bug Fixes
      - add in Bulk Resource Move and use bulk delete to handle epubs with thousands of files
      - add in Bulk Resource Rename to handle epubs with thousands of files
      - In FR, if Replace has focus and Find done, CodeView should get focus (Thanks BeckyEbook)
      - Fix dark mode Toolbar continuation symbols for Windows (Thank you BeckyEbook)
      


Sigil-2.1.0
    New Features
      - assign menu accelerators P - &Plugins, and K - Chec&kpoints (thank you BeckyEbook)
      - add ability to change keyboard focus using keyboard shortcuts or menus
          to BookBrowser, Preview, CodeView, ClipsWindow, and TableOfContents Windows
      - preserve Media Overlay Active Classes when deleting unused classes
      - Goto Link Or Style (or Ctrl-Clicking on a class will now search selectors
          with combinators if nothing found in normal css classes
      - update to a newer Spanish hunspell dictionary
      - overhaul of Building on Linux documentation
      - update 3rdparty zlib to version 1.3.1 for security and other bug fixes
      - update 3rdparty pcre2 to version 10.43 for security and other bug fixes
      - update to Qt 6.6.2 for security fixes, accessibility improvements
      - allow cancelling of Save if mend on save set and not well formed
      - Windows users can now set the SIGIL_USE_FREETYPE_FONTENGINE environment variable
           to more fully support woff and woff2 fonts
      
    Bug Fixes
      - multiple bug fixes from Qt 6.6.2 such as the transient child window resize bug on Windows, etc